results/SVCOMP/specgen/log-iarith1-2024_02_26_00_58_24.txt
class Main {
  //@ ensures \result == -32;
  public static void main(String[] args) {
    int i = 99;
    ++i;
    int tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    ++l;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == -32;
               ^
1 error

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    ++i;
    int tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    ++l;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

class Main {
  //@ ensures \result == -32;
  public static void main(String[] args) {
    int i = 99;
    ++i;
    int tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    ++l;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == -32;
               ^
1 error

class Main {
  //@ ensures i == -32;
  //@ ensures l == -32L;
  public static void main(String[] args) {
    int i = 99;
    ++i;
    int tmp = i + 2;
    i = tmp;
    tmp = i - 3;
    i = tmp;
    i += 3;
    i -= 3;
    tmp = i * 2;
    i = tmp;
    tmp = i / 3;
    i = tmp;
    i %= 34;
    i = -i;
    assert i == -32;
    long l = 99;
    ++l;
    l += 2L;
    l -= 3L;
    l *= 2L;
    l /= 3L;
    l %= 34L;
    l = -l;
    assert l == -32L;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith1.java:2: error: cannot find symbol
  //@ ensures i == -32;
              ^
  symbol:   variable i
  location: class Main
/home/max/Documents/JMLGPT/tmp/iarith1.java:3: error: cannot find symbol
  //@ ensures l == -32L;
              ^
  symbol:   variable l
  location: class Main
2 errors

